[tool.poetry]
name = "clab-api"
version = "0.1.0"
description = ""
authors = ["davetpj <dhkim92@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.111.0"}
pydantic-settings = "^2.3.3"
sqlalchemy = "^2.0.31"
boto3 = "^1.34.131"
requests = "^2.32.3"
pydub = "^0.25.1"
psycopg2-binary = "^2.9.9"
loguru = "^0.7.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pillow = "^10.3.0"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
mecab-ko = "^1.0.1"
wordcloud = "^1.9.3"
xlsxwriter = "^3.2.0"
supabase = "^2.5.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
